--- a/assets/style.css
+++ b/assets/style.css
@@ -3,29 +3,70 @@
   }
 
 body {
-    background-color: honeydew;
+    background-color: #4EA8DE;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 .header {
-    background-color: lightgreen;
-    color: darkgreen;
-    padding: 10px;
+    background-color: #56CFE1;
+    padding: 30px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
 .header h1 {
+    color: #6930C3;
     font-size: 50px;
 }
 
-.header h2 {
-    font-size: 30px;
-    padding-top: 20px;
+.header a{
+    color: #6930C3;
 }
 
-.content{
+h2 {
+    padding-top: 20px;
+    color:#5E60CE;
+    font-size: 30px;
+}
+
+.content {
     padding: 10px;
+}
+
+.content p {
+    font-size: 25px;
+    line-height: 1.4;
+    color: #6930C3;
+    padding: 20px;
+    font-weight: bold;
+    display: flex;
+    flex-direction: column; 
+}
+
+#about-me{
+    display: flex;
+    flex-direction: row; 
+    justify-content: space-around; 
+}
+ 
+#my-work{
+    display: flex;
+    flex-direction: row; 
+    justify-content: space-between;
+}
+
+#my-work img, #about-me img {
+    max-width: 20%;
+    padding: 50px 20px 20px 20px;
+}
+
+@media screen and (max-width: 768px){
+    .header {
+        flex-direction: column;
+    }
 }
