--- a/assets/style.css
+++ b/assets/style.css
@@ -2,8 +2,14 @@
     box-sizing: border-box;
   }
 
+  :root {
+      --heading-color: #5E60CE;
+      --content-background: #4EA8DE;
+      --heading-background: #56CFE1;
+  }
+
 body {
-    background-color: #4EA8DE;
+    background-color: var(--content-background);
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     margin: 0;
     display: flex;
@@ -11,17 +17,17 @@ body {
     justify-content: flex-start;
 }
 
+
 .header {
-    background-color: #56CFE1;
+    background-color: var(--heading-background);
     font-size: 30px;
     padding: 0px 30px;
     text-align: left;
-    color: #6930C3;
+    color: var(--heading-color);
 }
 
-
 .topnav {
-    background-color: #5E60CE;
+    background-color: var(--heading-color);
     font-size: 18px;
     padding: 0px 100px;
     display: flex;
@@ -29,14 +35,14 @@ body {
 }
 
 .topnav a {
-    color: #80FFDB;
+    color: var(--heading-background);
 }
 
 .content h2 {
     padding: 20px 80px 10px 15px;
-    color:#5E60CE;
-    font-size: 30px;
-    width: 20%;
+    color: var(--heading-color);
+    font-size: 35px;
+    width: 25%;
 }
 
 #about-me {
@@ -47,31 +53,61 @@ body {
 }
 
 #about-me img {
-    width: 20%;
+    width: 25%;
     padding-top: 45px;
 }
 
 #about-me p {
-    padding: 20px 15px 5px 20px;
-    width: 60%;
-    font-size: 22px;
-    color: #7400B8;
-    line-height: 1.3;
+    padding: 60px 15px 5px 20px;
+    width: 50%;
+    font-size: 28px;
+    color: var(--heading-color);
+    line-height: 1.4;
 }
 
 #my-work {
     padding-top: 20px;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-direction: row; 
 }
 
-#my-work img {
-    padding: 45px 10px 0px 0px;
-    width: 20%;
+.big-pic {
+    width: 25%;
+    padding: 45px 5px 5px 5px;
+}
+
+.big-pic img {
+    max-height: 540px;
+    padding: 10px;
+}
+
+.small-pic {
+    width: 50%;
+    padding: 45px 5px 5px 5px;
     display: flex;
+    align-items: center; 
+    flex-direction: column;
+}
+
+.small-pic img {
+    max-height: 180px;
+    padding: 10px;
+    display: flex;
+}
+
+/*
+#my-work h2 {
+    padding-right: 220px;
+}
+
+#my-work a, #my-work img {
+    width: 75%;
+    padding: 20px 0px 0px 20px;
+    display: flex;
+    flex-direction: row;
     justify-content: space-between;
 }
+*/
 
 #contact-me {
     display: flex;
@@ -87,16 +123,16 @@ body {
 }
 
 #contact-me ul li, #contact-me a {
-    font-size: 20px;
+    font-size: 22px;
     font-weight: bold;
-    color: #80FFDB;
-    width: 40%;
+    color: var(--heading-background);
+    width: 60%;
     display: flex;
     justify-content: space-evenly;
 }
 
 @media screen and (max-width: 600px) {
-    #about-me, #my-work, #contact-me, #contact-me ul {
+    .topnav, #about-me, #my-work, #contact-me, #contact-me ul {
         align-items: center;
         display: flex;
         flex-direction: column;
@@ -105,7 +141,7 @@ body {
         width: 100%;
         padding: 15px;
     }
-    #about-me, #about-me p, #my-work, #contact-me, #contact-me ul {
+    .header, #about-me, #about-me p, #my-work, #contact-me, #contact-me ul {
         text-align: center;
         padding: 15px;
         width: 100%;
