added shadows and misc styling

--- a/assets/style.css
+++ b/assets/style.css
@@ -8,6 +8,7 @@
       --heading-background: #56CFE1;
       --hover-text: #64DFDF;
       --hover-background: #6930C3;
+      --border-color: #80FFDB;
   }
 
 body {
@@ -21,11 +22,12 @@ body {
 
 
 .header {
-    background-color: var(--heading-background);
+    background-image: linear-gradient(to bottom right, var(--content-background),var(--border-color));
     font-size: 30px;
     padding: 0px 30px;
     text-align: left;
     color: var(--heading-color);
+    text-shadow: 2px 2px 5px var(--content-background);
 }
 
 .topnav {
@@ -40,11 +42,27 @@ body {
     color: var(--heading-background);
 }
 
+.topnav h2 {
+    text-shadow: 2px 2px 5px var(--hover-background);
+}
+
+.topnav h2:hover {
+    text-shadow: 1px 1px 2px var(--hover-background);
+}
+
 .content h2 {
     padding: 20px 80px 10px 15px;
     color: var(--heading-color);
     font-size: 35px;
     width: 25%;
+    text-shadow: 1px 1px 10px var(--border-color);
+}
+
+.content img {
+    border-radius: 20px;
+    border: 2px solid var(--border-color);
+    padding: 2px;
+    box-shadow: 1px 1px 15px var(--border-color);
 }
 
 #about-me {
@@ -57,15 +75,22 @@ body {
 #about-me img {
     width: 25%;
     max-width: 400px;
-    padding-top: 45px;
 }
 
+
 #about-me p {
-    padding: 60px 15px 5px 20px;
+    margin: 15px 15px 5px 20px;
+    padding: 50px 15px 20px 15px;
+    background-image: linear-gradient(to bottom right, var(--heading-background),var(--border-color),var(--heading-background));
     width: 50%;
-    font-size: 28px;
+    font-size: 26px;
+    text-align: center;
     color: var(--heading-color);
+    text-shadow: 1px 1px 2px var(--heading-background);
     line-height: 1.4;
+    border-radius: 20px;
+    border: 2px solid var(--heading-color);
+    box-shadow: 2px 2px 15px var(--heading-color);
 }
 
 #my-work {
@@ -74,24 +99,27 @@ body {
     flex-direction: row; 
 }
 
+#my-work button {
+    border-radius: 8px;
+    border: 1px solid var(--border-color);
+}
+
 .big-pic {
     padding: 45px 5px 5px 5px;
     position: relative;
-    width: 50%;
+    width: 40%;
 }
 
 .big-pic img {
-    max-height: 540px;
-    padding: 10px;
+    max-height: 600px;
     opacity: 1;
     display: block;
     width: 100%;
-    height: auto;
     transition: .5s ease;
     backface-visibility: hidden;
 }
 
-.big-pic-button {
+.big-pic-button, .cape-cod button, .lake-louise button, .purple-flower button  {
     transition: .5s ease;
     opacity: 0;
     position: absolute;
@@ -109,7 +137,7 @@ body {
     opacity: 1;
   }
   
-.big-pic-button {
+.big-pic-button, .small-pic button {
     background-color: var(--hover-background);
     color: var(--hover-text);
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -117,8 +145,8 @@ body {
     padding: 16px 32px;
   }
 
-.small-pic {
-    padding: 45px 5px 5px 5px;
+.cape-cod, .lake-louise, .purple-flower {
+    padding: 5px 0px 5px 50px;
     display: flex;
     align-items: center; 
     flex-direction: column;
@@ -127,37 +155,52 @@ body {
 }
 
 .small-pic img {
-    max-height: 180px;
-    padding: 10px;
+    max-height: 350px;
     opacity: 1;
     display: block;
     width: 100%;
-    height: auto;
     transition: .5s ease;
     backface-visibility: hidden;
 }
 
-.sm-button-1 {
-    transition: .5s ease;
-    opacity: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%)
-}
-
-.small-pic:hover .cape-cod {
+.cape-cod:hover img{
     opacity: 0.3;
   }
 
-.small-pic:hover .sm-button-1 {
+.cape-cod:hover button {
     opacity: 1;
   }
 
+.lake-louise:hover img{
+    opacity: 0.3;
+  }  
+
+.lake-louise:hover button {
+    opacity: 1;
+  }
+
+.purple-flower:hover img{
+    opacity: 0.3;
+  } 
+
+.purple-flower:hover button {
+    opacity: 1;
+  }
+
+.small-pic button {
+    font-size: 16px;
+    padding: 10px;
+}
+
 #contact-me {
+    background-color: var(--heading-color);
     display: flex;
     flex-direction: row;
+}
+
+#contact-me h2 {
+    color: var(--heading-background);
+    text-shadow: 1px 1px 15px var(--content-background);
 }
 
 #contact-me ul {
